--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -5,10 +5,12 @@ services:
     build:
       context: .
     ports:
-      - 5000:5000
+      - 5001:5000
     volumes:
       - ./:/usr/src/app
     tty: true
+    networks:
+      - flask-api
 
   # mysqldb:
   #   image: mysql
@@ -23,3 +25,6 @@ services:
 # volumes:
 #   mysql:
 #   mysql_config:
+
+networks:
+  flask-api:
